add form to the create shop

--- a/ios/RenMiss/Info.plist
+++ b/ios/RenMiss/Info.plist
@@ -50,6 +50,9 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Permission</string>
+
 	<false/>
 </dict>
 </plist>
