--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@react-navigation/stack": "^6.3.12",
     "@reduxjs/toolkit": "^1.9.2",
     "currency.js": "^2.0.4",
+    "formik": "^2.2.9",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-image-crop-picker": "^0.39.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
