--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,6 +98,7 @@ android {
         applicationId "com.renmiss"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
+        vectorDrawables.useSupportLibrary = true
         versionCode 1
         versionName "1.0"
     }
