--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@reduxjs/toolkit": "^1.9.2",
     "currency.js": "^2.0.4",
     "formik": "^2.2.9",
+    "nanoid": "^4.0.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-safe-area-context": "^4.5.0",
@@ -28,7 +30,8 @@
     "react-native-svg": "^13.8.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-redux": "^8.0.5",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
