--- a/ios/RenMiss/Info.plist
+++ b/ios/RenMiss/Info.plist
@@ -35,6 +35,25 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>UIAppFonts</key>
+<array>
+  <string>AntDesign.ttf</string>
+  <string>Entypo.ttf</string>
+  <string>EvilIcons.ttf</string>
+  <string>Feather.ttf</string>
+  <string>FontAwesome.ttf</string>
+  <string>FontAwesome5_Brands.ttf</string>
+  <string>FontAwesome5_Regular.ttf</string>
+  <string>FontAwesome5_Solid.ttf</string>
+  <string>Foundation.ttf</string>
+  <string>Ionicons.ttf</string>
+  <string>MaterialIcons.ttf</string>
+  <string>MaterialCommunityIcons.ttf</string>
+  <string>SimpleLineIcons.ttf</string>
+  <string>Octicons.ttf</string>
+  <string>Zocial.ttf</string>
+  <string>Fontisto.ttf</string>
+</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>UILaunchStoryboardName</key>
@@ -51,17 +70,15 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	 <key>NSLocationWhenInUseUsageDescription</key>
-  <string>YOUR TEXT</string>
   <key>NSMicrophoneUsageDescription</key>
-  <string>YOUR TEXT</string>
+  <string>microphone permission</string>
   <key>NSMotionUsageDescription</key>
   <string>YOUR TEXT</string>
   <key>NSPhotoLibraryUsageDescription</key>
-  <string>YOUR TEXT</string>
-  <key>NSPhotoLibraryAddUsageDescription</key>
-  <string>YOUR TEXT</string>
+  <string>photo permission</string>
+
   <key>NSCameraUsageDescription</key>
-  <string>YOUR TEXT</string>
+  <string>camera permision</string>
 
 	<false/>
 </dict>
