--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-select-dropdown": "^3.2.1",
     "react-native-svg": "^13.8.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "tailwindcss": "^3.2.4",
     "yup": "^1.0.2"
