--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.4",
-    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.12",
     "@reduxjs/toolkit": "^1.9.2",
     "currency.js": "^2.0.4",
     "formik": "^2.2.9",
-    "lottie-ios": "^3.4.1",
-    "lottie-react-native": "^5.1.5",
+    "lottie-ios": "3.4.0",
+    "lottie-react-native": "5.1.5",
     "nanoid": "^4.0.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -26,8 +27,10 @@
     "react-native-get-random-values": "^1.8.0",
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-paper": "^5.3.1",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.19.0",
+    "react-native-screens": "^3.20.0",
     "react-native-select-dropdown": "^3.2.1",
     "react-native-svg": "^13.8.0",
     "react-native-svg-transformer": "^1.0.0",
@@ -38,6 +41,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.0.0",
@@ -45,6 +49,7 @@
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
